syntax = "proto3";

package gamayun;

// The result service definition.
service ResultReportingService{
  // Reports the map only result to Gamayun
  rpc ReportResultWithMapOnly (JobResult) returns (EmptyResponse) {}
  // Reports an error to Gamayun
  rpc ReportError (JobError) returns (EmptyResponse) {}
}

//as maps cannot be repeated, we need to separate a map into a message (which can be repeated)
message MapResult{
  map<string, string> mapResult = 1;
}

// Result containing jobName and map-only results
message JobResult {
  string name = 1;
  string runId = 2;
  repeated MapResult results = 3;
}

message JobError {
  string name = 1;
  string runId = 2;
  string error = 3;
}

// The empty response
message EmptyResponse {
}